compile_err.txt
    Checking catest-parser v0.1.0 (E:\CATEST\crates\parser)
error[E0308]: mismatched types
  --> crates\parser\src\lib.rs:13:30
   |
13 |             "rs" | "rust" => tree_sitter_rust::language(),
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `tree_sitter::Language`, found a different `tree_sitter::Language`
   |
note: two different versions of crate `tree_sitter` are being used; two types coming from two different versions of the same crate are different types even if they look the same
  --> E:\DevCache\cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tree-sitter-0.20.10\binding_rust\lib.rs:43:1
   |
43 | pub struct Language(*const ffi::TSLanguage);
   | ^^^^^^^^^^^^^^^^^^^ this is the expected type `tree_sitter::Language`
   |
  ::: E:\DevCache\cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tree-sitter-0.22.6\binding_rust\lib.rs:54:1
   |
54 | pub struct Language(*const ffi::TSLanguage);
   | ^^^^^^^^^^^^^^^^^^^ this is the found type `tree_sitter::Language`
   |
  ::: crates\parser\src\lib.rs:2:5
   |
2  | use tree_sitter::{Language, Parser};
   |     ----------- one version of crate `tree_sitter` used here, as a direct dependency of the current crate
...
13 |             "rs" | "rust" => tree_sitter_rust::language(),
   |                              ---------------- one version of crate `tree_sitter` used here, as a dependency of crate `tree_sitter_rust`
   = help: you can use `cargo tree` to explore your dependency tree

For more information about this error, try `rustc --explain E0308`.
error: could not compile `catest-parser` (lib) due to 1 previous error
